--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Item Checker 2.0</title>
+    <title>tictactoe</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -55,17 +55,6 @@
             <div class="square"><img src=""  id="20"/></div>
             <div class="square"><img src=""  id="21"/></div>
             <div class="square"><img src=""  id="22"/></div>
-
-            <!--<div class="square"></div>-->
-            <!--<div class="square"></div>-->
-            <!--<div class="square"></div>-->
-            <!--<div class="square"></div>-->
-            <!--<div class="square"></div>-->
-            <!--<div class="square"></div>-->
-            <!--<div class="square"></div>-->
-            <!--<div class="square"></div>-->
-            <!--<div class="square"></div>-->
-
 
         </div>
 
